# teste_claude

./: README.md
music-api/music-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
music-api/music-api/app/: main.py
music-api/music-api/app/api/: dependencies.py
music-api/music-api/app/api/middleware/: error_handler.py
music-api/music-api/app/api/routes/: __init__.py  auth.py  health.py  recommendations.py  tracks.py
music-api/music-api/app/core/: config.py  exceptions.py  logging.py  security.py
music-api/music-api/app/domain/: models.py
music-api/music-api/app/graph/: algorithms.py  engine.py
music-api/music-api/app/repositories/: base.py
music-api/music-api/app/services/: cache.py  recommendation.py
music-api/music-api/tests/: conftest.py
music-api/music-api/tests/integration/: test_api.py
music-api/music-api/tests/unit/: test_domain_models.py  test_graph_algorithms.py  test_security.py
